      - New option 'cupt::console::actions-preview::show-not-preferred'.
      - New options 'cupt::console::actions-preview::show-summary',
        'cupt::console::actions-preview::show-details'.
      - New option 'cupt::cache::pin::addendums::but-automatic-upgrades'.
      - The APT option 'apt::acquire::translations' is no more used.
      - New option 'cupt::languages::indexes'.
    - system/worker:
      - Logging: log errors too.
      - Downloading package archives: include only those codename/component
        pairs to long descriptions which belong to a selected base
        download URI.
      - Updating release and index data: use i18n/Index for downloading package
        description localizations (Closes: #547948).
      - Updating release and index data: download all variants of requested
        description localizations, not only the first successful one.
    - cache:
      - Honor 'cupt::cache::limit-releases::*' options.
      - Process all requested translations, not only the first successful one.
    - cache/releaseinfo:
      - New field 'butAutomaticUpgrades'.
    - hashsums:
      - Reduce CPU overhead of the calculating hashes of short strings.
    - 'fatal', 'warn', 'debug', 'simulate': are deprecated now.
  * doc:
    - man:
      - [Jonathan Nieder] Split off a cupt.conf(5) page from cupt(1).
        Thanks to A. Costa for the idea (Closes: #648012).
    - What was referred as 'candidate version' is really
      the 'preferred version'.

 -- Eugene V. Lyubimkin <jackyf@debian.org>  Thu, 22 Sep 2011 11:33:25 +0300

cupt (2.2.2) unstable; urgency=low

  * debian:
    - libcupt2-0.postinst:
      - Don't copy APT GnuPG keyring here anymore. Since 2.1.x Cupt has its
        own directory for repository caches so no work is possible until
        the repository lists are generated first time, and at that time
        the keyring will be copied anyway.
  * lib:
    - cache: